03-k8s-pet-shop/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: pet-shop
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
