03-k8s-pet-shop/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pet-shop-ingress
  namespace: pet-shop
spec:
  ingressClassName: nginx
  rules:
  - host: pet-shop.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
